# doublecheck

./: DEPLOYMENT.md  DEVELOPMENT.md  README.md  TODO.txt  pyproject.toml
doublecheck/: __init__.py  admin.py  auth.py  blog.py  db.py  game.py  schema.sql
doublecheck/static/: style.css
doublecheck/templates/: base.html
doublecheck/templates/admin/: index.html  user_add.html  user_cp.html  user_edit.html
doublecheck/templates/auth/: login.html  register.html
doublecheck/templates/blog/: create.html  index.html  update.html
doublecheck/templates/game/: view.html
tests/: conftest.py  data.sql  test_admin.py  test_auth.py  test_blog.py  test_db.py  test_factory.py  test_game.py
